Update avatar image source in About section

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<!-- About -->
 			<article id="about">
 				<h2 class="major">About Me</h2>
-				<span class="image main"><img src="/api/placeholder/400/320" alt="Giovanni Colucci" /></span>
+				<span class="image main"><img src="/images/avatar.png" alt="Giovanni Colucci" /></span>
 				<p>Results-driven Senior Consultant with over 5 years of expertise in Digital Cloud Engineering,
 					specializing in Salesforce and Vlocity solutions for the Communications, Media, and Technology (CMT)
 					industry.</p>
