--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" />
 	</noscript>
+	<link rel-"icon" href-"/images/favicon.ico">
 </head>
 
 <body class="is-preload">
