Fix favicon link syntax, enhance SEO with meta tags, add remove_duplicates function, and update sitemap

--- a/index.html
+++ b/index.html
@@ -9,7 +9,81 @@
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" />
 	</noscript>
-	<link rel-"icon" href-"/images/favicon.ico">
+	<link rel="icon" href="/images/favicon.ico">
+
+	<!-- Add these right after the viewport meta tag -->
+	<meta name="description"
+		content="Giovanni Colucci - Senior Cloud Engineer and Salesforce Industries Expert specializing in Communications, Media, and Technology (CMT) industry solutions with over 5 years of expertise." />
+	<meta name="keywords"
+		content="Giovanni Colucci, Salesforce Expert, Cloud Engineer, Salesforce Industries, CMT, Vlocity, Salesforce Consultant, Digital Transformation" />
+	<meta name="author" content="Giovanni Colucci" />
+
+	<!-- Open Graph Meta Tags for social sharing -->
+	<meta property="og:title" content="Giovanni Colucci - Senior Cloud Engineer | Salesforce Industries Expert" />
+	<meta property="og:description"
+		content="Senior Cloud Engineer specializing in Salesforce and Vlocity solutions for the Communications, Media, and Technology (CMT) industry." />
+	<meta property="og:image" content="https://coluccigiovanni.com/images/avatar.png" />
+	<meta property="og:url" content="https://coluccigiovanni.com" />
+	<meta property="og:type" content="website" />
+
+	<!-- Twitter Card data -->
+	<meta name="twitter:card" content="summary" />
+	<meta name="twitter:title" content="Giovanni Colucci - Senior Cloud Engineer | Salesforce Industries Expert" />
+	<meta name="twitter:description"
+		content="Senior Cloud Engineer specializing in Salesforce and Vlocity solutions for the CMT industry." />
+	<meta name="twitter:image" content="https://coluccigiovanni.com/images/avatar.png" />
+
+	<!-- Canonical URL -->
+	<meta rel="canonical" href="https://coluccigiovanni.com" />
+
+	<script type="application/ld+json">
+		{
+		  "@context": "https://schema.org",
+		  "@type": "Person",
+		  "name": "Giovanni Colucci",
+		  "jobTitle": "Senior Cloud Engineer",
+		  "description": "Salesforce Industries Expert specializing in Communications, Media, and Technology (CMT) industry solutions",
+		  "image": "https://coluccigiovanni.com/images/avatar.png",
+		  "url": "https://coluccigiovanni.com",
+		  "sameAs": [
+			"https://www.linkedin.com/in/coluccigiovanni16"
+		  ],
+		  "email": "coluccigiovanni16@gmail.com",
+		  "worksFor": {
+			"@type": "Organization",
+			"name": "Deloitte Digital"
+		  },
+		  "knowsAbout": [
+			"Salesforce",
+			"Vlocity",
+			"Cloud Engineering",
+			"Digital Transformation",
+			"CPQ",
+			"EPC",
+			"Data Raptors",
+			"Omniscripts",
+			"Lightning Web Components",
+			"APEX"
+		  ],
+		  "hasCredential": [
+			{
+			  "@type": "EducationalOccupationalCredential",
+			  "name": "Salesforce Certified Data Cloud Consultant",
+			  "credentialCategory": "Certification"
+			},
+			{
+			  "@type": "EducationalOccupationalCredential",
+			  "name": "Salesforce Certified Application Architect",
+			  "credentialCategory": "Certification"
+			},
+			{
+			  "@type": "EducationalOccupationalCredential",
+			  "name": "AWS Certified Cloud Practitioner",
+			  "credentialCategory": "Certification"
+			}
+		  ]
+		}
+		</script>
 </head>
 
 <body class="is-preload">
