Remove unused image files and update favicon links for improved site performance and branding

--- a/index.html
+++ b/index.html
@@ -5,17 +5,21 @@
 	<title>Giovanni Colucci - Senior Cloud Engineer | Salesforce Industries Expert</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+
+	<!-- Stylesheets -->
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" />
 	</noscript>
-	<link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
-	<!-- or for PNG -->
-	<link rel="icon" href="/images/favicon.png" type="image/png" />
-	<link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
+
+	<!-- Favicons and App Icons -->
+	<link rel="icon" href="/images/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="/images/favicon.png" type="image/png">
 	<link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
 	<link rel="manifest" href="/site.webmanifest">
+
 
 
 
